feat: Solo & Battle speedrun game modes feat: added /srp help command
ci: Automatic versioning and changelogs on releases
ci: Linting

BREAKING CHANGE: Major architectural redesign and refactor.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,12 @@ scripts/**
 
 # Personal configuration files
 **/config-personal.yml
+
+# Linter
+megalinter-reports/
+
+# Conventional changelogs
+package-lock.json
+package.json
+CHANGELOG.md
+node_modules
