fix: timer not incrementing seconds/minutes/hours
ci: SNAPSHOT promotion adds an option in deploy
ci: build correctly bumps versions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,8 @@ jobs:
 
   create-release:
     runs-on: ubuntu-latest
-
+    outputs:
+      version: ${{ steps.set-version.outputs.version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -53,26 +54,40 @@ jobs:
           artifacts: dist/*.jar
           token: ${{ secrets.CI_CD_PAT }}
 
-  update-deploy-workflow:
+  update-options:
     needs: create-release
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        workflow-file: [ ".github/workflows/deploy.yml", ".github/workflows/promote-snapshot.yml" ]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
           persist-credentials: false
 
-      # Add an option to the deploy-workflow, with the new version
-      - name: Update deploy options
+      # Add an option to the workflow with the new version
+      - name: Add new version to workflow options
         run: |
-          FILE=.github/workflows/deploy.yml
-          VERSION="${{ inputs.version }}"
-
-          # Remove the version if it already exists
-          sed -i "/- $VERSION/d" "$FILE"
-
-          # Prepend new version right after the 'options:' line
-          sed -i "/options:/a\          - $VERSION" "$FILE"
+          FILE="${{ matrix.workflow-file }}"
+          VERSION="${{ needs.create-release.outputs.version }}"
+          
+          # Check if version already exists
+          if grep -q "  - $VERSION" "$FILE"; then
+            echo "Version $VERSION already exists in $FILE. Skipping."
+            exit 0
+          fi
+          
+          # Insert version under 'options:' safely
+          awk -v ver="$VERSION" '
+            /^(\s*)options:/ {
+              print
+              indent = substr($0, 1, match($0,/options:/)-1) "  "
+              print indent "- " ver
+              next
+            }
+            { print }
+          ' "$FILE" > tmp.yml && mv tmp.yml "$FILE"
 
       - name: Commit and push changes
         run: |
@@ -80,11 +95,11 @@ jobs:
           git config user.email "github-actions@github.com"
           git remote set-url origin https://x-access-token:${{ secrets.CI_CD_PAT }}@github.com/${{ github.repository }}.git
           
-          if git diff --quiet .github/workflows/deploy.yml; then
+          if git diff --quiet "${{ matrix.workflow-file }}"; then
             echo "No changes to commit"
             exit 0
           fi
           
-          git add .github/workflows/deploy.yml
-          git commit -m "Release ${{ inputs.version }} [skip ci]"
+          git add "${{ matrix.workflow-file }}"
+          git commit -m "Release ${{ needs.create-release.outputs.version }} [skip ci]"
           git push
