--- a/.github/workflows/promote-snapshot.yml
+++ b/.github/workflows/promote-snapshot.yml
@@ -7,11 +7,14 @@ on:
         description: The SNAPSHOT to promote
         type: choice
         options:
+          - 1.0.0-SNAPSHOT
           - 0.0.0
 
 jobs:
   promote-release:
     runs-on: ubuntu-latest
+    outputs:
+      final-version: ${{ steps.version.outputs.final }}
     steps:
 
       # Create an assets folder
@@ -26,6 +29,7 @@ jobs:
           FINAL="${SNAPSHOT/-SNAPSHOT/}"
           echo "FINAL_VERSION=$FINAL" >> $GITHUB_ENV
           echo "Promoting $SNAPSHOT → $FINAL"
+          echo "final=$FINAL" >> $GITHUB_OUTPUT
 
       # Download assets from the SNAPSHOT release
       - name: Download SNAPSHOT release assets
@@ -37,48 +41,57 @@ jobs:
           asset-file: '*.jar'
           asset-output: './assets'
 
+      # Prepare release body with updated version
+      - name: Prepare release body
+        run: |
+          echo "${{ fromJSON(steps.snapshot_release.outputs.body) }}" > original_body.md
+
+      # Rewrite the release heading
+      - name: Rewrite release heading
+        run: |
+          SNAPSHOT="${{ github.event.inputs.version }}"
+          FINAL="${SNAPSHOT/-SNAPSHOT/}"
+
+          REPO_OWNER="${GITHUB_REPOSITORY%/*}"
+          REPO_NAME="${GITHUB_REPOSITORY#*/}"
+
+          # Match heading with date at the end: (...SNAPSHOT)
+          sed -E \
+            "0,/^## \\[$SNAPSHOT\\]\\(https:\/\/github.com\/${REPO_OWNER}\/${REPO_NAME}\/compare\/([^)]*)$SNAPSHOT\) \([0-9]{4}-[0-9]{2}-[0-9]{2}\)/s/^## \\[$SNAPSHOT\\]\\(https:\/\/github.com\/${REPO_OWNER}\/${REPO_NAME}\/compare\/([^)]*)$SNAPSHOT\) \(([0-9]{4}-[0-9]{2}-[0-9]{2})\)/## [$FINAL](https:\/\/github.com\/${REPO_OWNER}\/${REPO_NAME}\/compare\/\1$FINAL) (\2)/" \
+            original_body.md \
+            > updated_body.md
+
+          echo "RELEASE_BODY<<EOF" >> $GITHUB_ENV
+          cat updated_body.md >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
+      # Rename downloaded JAR assets
+      - name: Rename assets to final version
+        run: |
+          FINAL="${{ env.FINAL_VERSION }}"
+          for file in ./assets/*.jar; do
+            NEWNAME="$(echo "$(basename "$file")" | sed "s/-SNAPSHOT//")"
+            mv "$file" "./assets/$NEWNAME"
+            echo "Renamed: $file → $NEWNAME"
+          done
+
       # Create the new release using the body from the SNAPSHOT release
       - name: Create promoted release
         uses: softprops/action-gh-release@v1
         with:
           name: ${{ env.FINAL_VERSION }}
           tag_name: ${{ env.FINAL_VERSION }}
-          body: ${{ fromJSON(steps.snapshot_release.outputs.body) }}
+          body: ${{ env.RELEASE_BODY }}
           files: ./assets/*
         env:
           GITHUB_TOKEN: ${{ secrets.CI_CD_PAT }}
 
+  # Add the promoted version as an option in Deploy
   update-deploy-options:
     needs: promote-release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-
-      # Add the new version as an option in deploy.yml
-      - name: Update deploy workflow options
-        run: |
-          FILE=".github/workflows/deploy.yml"
-          VERSION="${{ needs.promote-release.outputs.final_version }}"
-          
-          sed -i "/- $VERSION/d" "$FILE"
-          sed -i "/options:/a\          - $VERSION" "$FILE"
-          - 1.0.0-SNAPSHOT
-
-      # Commit and push changes
-      - name: Commit and push changes
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.CI_CD_PAT }}@github.com/${{ github.repository }}.git
-          
-          if git diff --quiet $FILE; then
-            echo "No changes to commit"
-            exit 0
-          fi
-          
-          git add $FILE
-          git commit -m "Release ${{ inputs.version }} [skip ci]"
-          git push
+    uses: ./.github/workflows/update-version.yml
+    with:
+      workflow-file: .github/workflows/deploy.yml
+      version: ${{ needs.promote-release.outputs.final-version }}
+    secrets:
+      TOKEN: ${{ secrets.CI_CD_PAT }}
